FSE_APP_DEPLOYMENT/Project-2(Shopping)/k8s/app/cloud-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-gateway-app
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  selector:
    matchLabels:
      app: cloud-gateway-app
  template:
    metadata:
      labels:
        app: cloud-gateway-app
    spec:
      containers:
      - name: cloud-gateway-app
        image: deependra09/apigatewayserver:1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 9094
---

apiVersion: v1
kind: Service
metadata:
  name: cloud-gateway-svc
spec:
#  type: LoadBalancer
  selector:
    app: cloud-gateway-app
  ports:
  - port: 80
    targetPort: 9094
  type: ClusterIP
