FSE_APP_DEPLOYMENT/Project-2(Shopping)/k8s/app/config-server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server-app
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  selector:
    matchLabels:
      app: config-server-app
  template:
    metadata:
      labels:
        app: config-server-app
    spec:
      containers:
      - name: config-server-app
        image: deependra09/configserver:1.0.0
        ports:
        - containerPort: 9092
---

apiVersion: v1
kind: Service
metadata:
  name: config-server-svc
spec:
  selector:
    app: config-server-app
  ports:
  - port: 80
    targetPort: 9092
  type: ClusterIP
