FSE_APP_DEPLOYMENT/Project-2(Shopping)/k8s/app/mysql-deployment.yaml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
spec:
  selector:
    matchLabels:
      app: mysql
  serviceName: mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-initdb
          mountPath: /docker-entrypoint-initdb.d
        - name: mysql-persitent-storage
          mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persitent-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
        - name: mysql-initdb
          configMap:
            name: mysql-initdb-cm


---

apiVersion: v1
kind: Service
metadata:
  name: mysql
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
spec:
  clusterIP: None
  selector:
    app: mysql
  ports:
  - port: 3306
