FSE_APP_DEPLOYMENT/Project-2(Shopping)/k8s/app/order-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service-app
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  selector:
    matchLabels:
      app: order-service-app
  template:
    metadata:
      labels:
        app: order-service-app
    spec:
      containers:
      - name: order-service-app
        image: deependra09/orderservice:1.0.0
        ports:
        - containerPort: 9091
---

apiVersion: v1
kind: Service
metadata:
  name: order-service-svc
spec:
  selector:
    app: order-service-app
  ports:
  - port: 80
    targetPort: 9091
