FSE_APP_DEPLOYMENT/Project-2(Shopping)/k8s/app/payment-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service-app
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  selector:
    matchLabels:
      app: payment-service-app
  template:
    metadata:
      labels:
        app: payment-service-app
    spec:
      containers:
      - name: payment-service-app
        image: deependra09/paymentservice:1.0.0
        ports:
        - containerPort: 9093
---

apiVersion: v1
kind: Service
metadata:
  name: payment-service-svc
spec:
  selector:
    app: payment-service-app
  ports:
  - port: 80
    targetPort: 9093
