FSE_APP_DEPLOYMENT/Project-2(Shopping)/k8s/app/product-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service-app
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-service-app
  template:
    metadata:
      labels:
        app: product-service-app
    spec:
      containers:
      - name: product-service-app
        image: deependra09/productservice:1.0.0
        ports:
        - containerPort: 9090
---

apiVersion: v1
kind: Service
metadata:
  name: product-service-svc
spec:
  selector:
    app: product-service-app
  ports:
  - port: 80
    targetPort: 9090
