FSE_APP_DEPLOYMENT/Project-2(Shopping)/k8s/app/service-registry-statefulset.yaml
#apiVersion: apps/v1
#kind: StatefulSet
#metadata:
#  name: eureka
#spec:
#  selector:
#    matchLabels:
#      app: eureka
#  serviceName: "eureka"
#  replicas: 1
#  template:
#    metadata:
#      labels:
#        app: eureka
#    spec:
#      containers:
#      - name: eureka
#        image: deependra09/eurekaserver:1.0.0
#        imagePullPolicy: Always
#        ports:
#        - containerPort: 8761
#
#
#---
#
#apiVersion: v1
#kind: Service
#metadata:
#  name: eureka
#spec:
#  clusterIP: None
#  selector:
#    app: eureka
#  ports:
#  - port: 8761
#    name: eureka
#
#---
#
#apiVersion: v1
#kind: Service
#metadata:
#  name: eureka-lb
#spec:
#  type: NodePort
#  selector:
#    app: eureka
#  ports:
#  - port: 80
#    targetPort: 8761
#


apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka
  template:
    metadata:
      labels:
        app: eureka
    spec:
      containers:
        - name: eureka
          image: deependra09/eurekaserver:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: eureka
spec:
  selector:
    app: eureka
  ports:
    - name: http
      port: 8761
      targetPort: 8761
  type: ClusterIP
