FSE_APP_DEPLOYMENT/Project-2(Shopping)/k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-gateway-ingress
  annotations:
    argocd.argoproj.io/sync-wave: "4"
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: cloud-gateway-svc
                port:
                  number: 80
